--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="#" class="btn btn-primary has-before has-after">Let’s Talk 👋</a>
+      <a href="https://wa.me/212676445591" class="btn btn-primary has-before has-after">Let’s Talk 👋</a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -448,7 +448,7 @@
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Dentolo platform</a>
+                    <a href="https://codewithsadee.github.io/dentelo/" class="card-title">Dentolo platform</a>
                   </h3>
 
                   <a href="#" class="card-tag">Branding & Design</a>
@@ -486,10 +486,10 @@
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Lawyer Portfolio</a>
+                    <a href="https://martyna-winiarska.vercel.app/" class="card-title">Lawyer Portfolio</a>
                   </h3>
 
-                  <a href="#" class="card-tag">Website Design</a>
+                  <a href="https://martyna-winiarska.vercel.app/" class="card-tag">Website Design</a>
                 </div>
 
               </div>
@@ -505,7 +505,7 @@
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">E-commerce</a>
+                    <a href="https://precious-puffpuff-81885e.netlify.app/" class="card-title">E-commerce</a>
                   </h3>
 
                   <a href="#" class="card-tag">Design and development</a>
